fix[#50499]: Change PageHeader align-items to baseline

--- a/app/components/primer/open_project/page_header.pcss
+++ b/app/components/primer/open_project/page_header.pcss
@@ -7,7 +7,7 @@
   border-bottom: var(--borderWidth-thin) solid var(--borderColor-muted);
   flex-flow: row wrap;
   justify-content: flex-end; /* Keep actions right aligned. */
-  align-items: center; /* Keep back button vertically aligned. */
+  align-items: baseline; /* Keep back button vertically aligned. */
 
   @media (max-width: 767.98px) {
     border-bottom: 0;
